--- a/www/css/media.css
+++ b/www/css/media.css
@@ -1,22 +1,27 @@
 @media (min-width: 601px) and (max-width: 768px) {
-   .logo img {
-        width: 90%;
-    }
-	
-#boardrightcb, #boardleft{
+   
+	#boardrightcb, #boardleft{
 		float: none;
 	}
+	
+	#standartLogo { display: none; } 
+	#phoneLogo { display: block; }
 }
  
 
  
 @media (min-width: 320px) and (max-width: 600px) {
 
-    .logo img {
-        width: 90%;
-    }
-	
 	.textWrapRight, .textWrapLeft, .globalImgBlock, .corporateImgBlock , #boardrightcb, #boardleft{
 		float: none;
 	}
+	
+	#standartLogo { display: none; } 
+	#phoneLogo { display: block; }
+
+}
+
+@media (min-width: 768px) and (max-width: 1045px ) {
+	#standartLogo { display: none; } 
+	#phoneLogo { display: block; }
 }
